<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android           ="http://schemas.android.com/apk/res/android"
    xmlns:tools             ="http://schemas.android.com/tools"
    android:layout_width    ="match_parent"
    android:layout_height   ="match_parent"
    tools:context           =".activities.MainActivity">

    <RelativeLayout
        android:layout_width    ="match_parent"
        android:layout_height   ="match_parent"
        android:paddingBottom   ="@dimen/activity_vertical_margin"
        android:paddingLeft     ="@dimen/activity_horizontal_margin"
        android:paddingRight    ="@dimen/activity_horizontal_margin"
        android:paddingTop      ="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/settings_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:onClick="onClick"
            android:paddingBottom="10dip"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="5dip"
            android:src="@drawable/settings_icon" />

        <TextView
            android:id              ="@+id/title"
            android:layout_width    ="wrap_content"
            android:layout_height   ="wrap_content"
            android:text            ="SMART SDK DEMO"
            android:textSize        ="24sp"
            android:textStyle       ="bold"
            android:layout_centerHorizontal="true"/>

        <ScrollView
            android:layout_width="200dip"
            android:layout_height="match_parent"

            android:layout_marginTop="15dip"
            android:layout_below    ="@+id/title"
            android:layout_centerHorizontal="true">

            <RelativeLayout
                android:layout_width    ="200dip"
                android:layout_height   ="wrap_content">


                <Button
                    android:id              ="@+id/purchase_btn"
                    android:layout_width    ="200dip"
                    android:layout_height   ="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text            ="@string/payment"
                    android:onClick         ="onClick"
                    android:background      ="@drawable/button_selector"/>

                <Button
                    android:id              ="@+id/refund_btn"
                    android:layout_width    ="200dip"
                    android:layout_height   ="wrap_content"
                    android:layout_below    ="@+id/purchase_btn"
                    android:layout_marginTop="8dip"
                    android:layout_centerHorizontal="true"
                    android:text            ="@string/refund"
                    android:onClick         ="onClick"
                    android:background      ="@drawable/button_selector"/>

                <Button
                    android:id              ="@+id/void_btn"
                    android:layout_width    ="200dip"
                    android:layout_height   ="wrap_content"
                    android:layout_below    ="@+id/refund_btn"
                    android:layout_marginTop="8dip"
                    android:layout_centerHorizontal="true"
                    android:text            ="@string/reversal"
                    android:onClick         ="onClick"
                    android:background      ="@drawable/button_selector"/>

                <Button
                    android:id              ="@+id/preauth_btn"
                    android:layout_width    ="200dip"
                    android:layout_height   ="wrap_content"
                    android:layout_below    ="@+id/void_btn"
                    android:layout_marginTop="8dip"
                    android:layout_centerHorizontal="true"
                    android:text            ="@string/preauth"
                    android:onClick         ="onClick"
                    android:background      ="@drawable/button_selector"/>

                <Button
                    android:id              ="@+id/preauth_completion_btn"
                    android:layout_width    ="200dip"
                    android:layout_height   ="wrap_content"
                    android:layout_below    ="@+id/preauth_btn"
                    android:layout_marginTop="8dip"
                    android:layout_centerHorizontal="true"
                    android:text            ="@string/preauth_completion"
                    android:onClick         ="onClick"
                    android:background      ="@drawable/button_selector"/>

                <Button
                    android:id              ="@+id/preauth_cancellation_btn"
                    android:layout_width    ="200dip"
                    android:layout_height   ="wrap_content"
                    android:layout_below    ="@+id/preauth_completion_btn"
                    android:layout_marginTop="8dip"
                    android:layout_centerHorizontal="true"
                    android:text            ="@string/preauth_cancellation"
                    android:onClick         ="onClick"
                    android:background      ="@drawable/button_selector"/>

                <Button
                    android:id              ="@+id/giftcard_btn"
                    android:layout_width    ="200dip"
                    android:layout_height   ="wrap_content"
                    android:layout_below    ="@+id/preauth_cancellation_btn"
                    android:layout_marginTop="8dip"
                    android:layout_centerHorizontal="true"
                    android:text            ="@string/giftcards"
                    android:onClick         ="onClick"
                    android:background      ="@drawable/button_selector"/>

                <Button
                    android:id              ="@+id/payment_request_btn"
                    android:layout_width    ="200dip"
                    android:layout_height   ="wrap_content"
                    android:layout_below    ="@+id/giftcard_btn"
                    android:layout_marginTop="8dip"
                    android:layout_centerHorizontal="true"
                    android:text            ="@string/payment_request"
                    android:onClick         ="onClick"
                    android:background      ="@drawable/button_selector"/>

                <Button
                    android:id              ="@+id/reprint_receipt_btn"
                    android:layout_width    ="200dip"
                    android:layout_height   ="wrap_content"
                    android:layout_below    ="@+id/payment_request_btn"
                    android:layout_marginTop="8dip"
                    android:layout_centerHorizontal="true"
                    android:text            ="@string/reprint_receipt"
                    android:onClick         ="onClick"
                    android:background      ="@drawable/button_selector"/>

                <Button
                    android:id              ="@+id/print_receipt_btn"
                    android:layout_width    ="200dip"
                    android:layout_height   ="wrap_content"
                    android:layout_below    ="@+id/reprint_receipt_btn"
                    android:layout_marginTop="8dip"
                    android:layout_centerHorizontal="true"
                    android:text            ="@string/print_text"
                    android:onClick         ="onClick"
                    android:background      ="@drawable/button_selector"/>


                <Button
                    android:id              ="@+id/sam_btn"
                    android:layout_width    ="200dip"
                    android:layout_height   ="wrap_content"
                    android:layout_below    ="@+id/print_receipt_btn"
                    android:layout_marginTop="8dip"
                    android:layout_centerHorizontal="true"
                    android:text            ="@string/test_sam"
                    android:onClick         ="onClick"
                    android:background      ="@drawable/button_selector"/>

            </RelativeLayout>
        </ScrollView>

    </RelativeLayout>

    <RelativeLayout
        android:id              ="@+id/progress_layout"
        android:layout_width    ="match_parent"
        android:layout_height   ="match_parent"
        android:background      ="#77000000"
        android:clickable       ="true"
        android:visibility      ="visible">

        <ProgressBar
            android:id                      ="@+id/progress_bar"
            android:layout_width            ="wrap_content"
            android:layout_height           ="wrap_content"
            android:layout_centerInParent=  "true"/>

    </RelativeLayout>

    <TextView
        android:id                          ="@+id/version"
        android:layout_width                ="wrap_content"
        android:layout_height               ="wrap_content"
        android:layout_alignParentBottom    ="true"
        android:layout_alignParentEnd       ="true"
        android:layout_marginEnd            ="5dip"
        android:layout_marginBottom         ="5dip"
        android:text                        ="v. 1.0"/>

</RelativeLayout>
